--- a/tcc/src/main/resources/application.properties
+++ b/tcc/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=tcc
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/db_tcc
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.open-in-view=false
 
 api.security.token.secret=my-secret-key-from-video
-
